log/build_2026-03-14_23-47-20/my_robot_pkg/stderr.log
  File "/home/anand/ros2_ws/install/my_robot_pkg/lib/python3.10/site-packages/my_robot_pkg/temperature_subscriber.py", line 3
    from std_msgs>msg import string
                 ^
SyntaxError: invalid syntax

